ChangeLog 'burst-clusterizer'

Structure

Date - user
	FEATURES: 	explanation of new features
	BUGFIX:   	explanation of bug solved
	CHANGES:  	explanation of codification changes

2007/11/28 - jgonzale
	CHANGES:	The output binary is now called Dimemas3
	CHANGES:	Modifications in data access layer to use traces numbered in
				range 0..N-1
	BUGFIX:		Correct read in data access layer for 'rendez_vous' attribute

2007/11/05 - jgonzale
	CHANGES:    Added 'enable-idle-accounting' compilation option to not
				include the idle blocks on CPU consumption accounting

2007/10/29 - jgonzale
	CHANGES:	Incresed API buffer size, in order to correct simulate traces
				with big headers

2007/09/21 - jgonzale
	BUGFIX:		In function 'thread_in_communicator', TaskId of thread is
				not modified

2007/06/13 - jgonzale
	BUGFIX:		In function 'DAP_add_comm' from data access API the queues of
				new communicators are initialized
	BUGFIX:     'add_global_ops' function in 'read.c' file is moved to correct
				xlc compilation

2007/05/07 - jgonzale
	CHANGES:	Time adjust (apply 1e6 factor) is done in 'get_next_action' on
				read.c, instead of on the data access API.

2007/04/20 - jgonzale
	CHANGES:	MAJOR CHANGE. New data access API is used.

2007/03/15 - jgonzale
	BUGFIX:		Solved a problem related to Paraver trace generation where
				IDLE_BLOCKs where incorrectly translated
	CHANGES:	Major changes in Paraver trace generation. Some files has been
				moved to 'common-files'. Now state color generation is coherent
				with burst-clusterizer and the trace facility.
